@@ -45,7 +45,7 @@ Group members can be specified using a glob (see L<Text::Glob>) which match agai
 
  all: *
 
-Each user automatically gets his own group, so if there is a users named bob and alice, this is 
+Each user automatically gets his own group, so if there are users named bob and alice, this is 
 unnecessary:
 
  alice: alice
@@ -108,7 +108,7 @@ sub refresh {
     if ( has_changed( $config->group_file ) ) {
         %all_users = map { $_ => 1 } __PACKAGE__->app->auth->all_users;
         %groupUser = ();
-        my %data = __PACKAGE__->read_file( $config->group_file, nest => 1 );
+        my %data = __PACKAGE__->read_file( $config->group_file, nest => 1, lc_values => 1, lc_keys => 1 );
         for my $k (keys %data) {
             my %users;
             for my $v (keys %{ $data{$k} }) {
@@ -122,7 +122,7 @@ sub refresh {
     }
     if ( has_changed( $config->resource_file ) ) {
         %all_users = map { $_ => 1 } __PACKAGE__->app->auth->all_users;
-        %resourceActionGroup = __PACKAGE__->read_file( $config->resource_file, nest => 2 );
+        %resourceActionGroup = __PACKAGE__->read_file( $config->resource_file, nest => 2, lc_values => 1 );
 
         foreach my $resource (keys %resourceActionGroup)
         {
@@ -301,8 +301,9 @@ Returns undef if the group does not exist.
 =cut
 
 sub users_in_group {
-    my $class = shift;
-    my $group = shift or return ();
+    my($class, $group) = @_;
+    return unless defined $group;
+    $group = lc $group;
     return unless defined $groupUser{$group};
     return [keys %{ $groupUser{$group} }];
 }
@@ -359,6 +360,8 @@ Delete the given group.
 sub delete_group
 {
     my($class, $group) = @_;
+    
+    $group = lc $group;
 
     unless($group && defined $groupUser{$group}) {
         WARN "Group $group does not exist";
@@ -380,7 +383,7 @@ sub delete_group
         while(! eof $fh) {
             my $line = <$fh>;
             my($thisgroup, $password) = split /\s*:/, $line;
-            next if $thisgroup eq $group;
+            next if lc $thisgroup eq $group;
             $buffer .= $line;
         }
 
@@ -408,6 +411,8 @@ sub update_group
 {
     my($class, $group, $users) = @_;
 
+    $group = lc $group;
+    
     unless($group && defined $groupUser{$group}) {
         WARN "Group $group does not exist";
         return 0;
@@ -430,7 +435,7 @@ sub update_group
         while(! eof $fh) {
             my $line = <$fh>;
             my($thisgroup, $password) = split /\s*:/, $line;
-            $line =~ s{:.*$}{: $users} if $thisgroup eq $group;
+            $line =~ s{:.*$}{: $users} if lc($thisgroup) eq $group;
             $buffer .= $line;
         }
 
@@ -456,6 +461,8 @@ action ($action) on the given resource ($resource).
 sub grant
 {
     my($class, $group, $action, $resource) = @_;
+    
+    $group = lc $group;
 
     unless($group && (defined $groupUser{$group} || defined $all_users{$group})) {
         WARN "Group (or user) $group does not exist";
@@ -500,6 +507,8 @@ action ($action) on the given resource ($resource).
 sub revoke
 {
     my($class, $group, $action, $resource) = @_;
+    
+    $group = lc $group;
 
     unless($group && (defined $groupUser{$group} || defined $all_users{$group})) {
         WARN "Group (or user) $group does not exist";
