@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Better tests for case insensitive usernames
 
 0.06      2012-12-14 11:41:26 America/New_York
   - Avoid creating extra resources when using /authz/user/... routes
